# behaviz

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
behaviz/: __init__.py  cli.py  dashboard.py  distribution.py  impact.py  io.py  linked.py  presets.py  psychometric.py  rainplot.py
behaviz/backends/: __init__.py  _legend.py  _save.py  hover.py  override.py  renderer.py  renderer_manager.py  renderer_registry.py
behaviz/backends/bokeh/: __init__.py  backend.py  custom_plots.py  hover_engine.py  overrider.py
behaviz/backends/matplotlib/: __init__.py  backend.py  custom_plots.py  (+3 more)
behaviz/composite_plots/: boxplot.py  forestplot.py  hist1dplot.py  lollipopplot.py  parallelplot.py  raincloudplot.py  ridgeplot.py  styling.py
behaviz/compound_plots/: boxplot.py  distribution.py  hist1dplot.py  impact.py  lollipopplot.py  parallelplot.py  psychometric.py  raincloudplot.py  rainplot.py  styling.py
behaviz/core/: __init__.py  auxiliary.py  channels.py  context.py  core.py  core_factory.py  data_source.py  errors.py  flows.py  grouping.py  layout.py  override.py  overrider.py  palette.py  plot_registry.py  plot_setup.py  pval.py  registry_validation.py  renderer.py  renderer_manager.py  renderer_registry.py  scales.py  utils.py
behaviz/manipulations/: __init__.py  binner.py  dodger.py  jitter.py  manipulator.py  normaliser.py  smoother.py
behaviz/spec/: __init__.py  _style_presets.py  axis_spec.py  colorbar_spec.py  figure_spec.py  line_spec.py  plot_spec.py  serialization.py
docs/: architecture.md  channels.md  composite.md  concepts.md  data.md  grouping.md  hover.md  index.md  install.md  manipulations.md  overriding.md  presets.md  quickstart.md  requirements.txt  saving.md
docs/plots/: annotation.md  basic.md  composite.md  distribution.md  index.md  twod.md
docs/reference/: core.md  io.md  manipulations.md  spec.md
docs/specs/: axis.md  colorbar.md  figure.md  index.md
examples/: canvas_and_grid_example.ipynb  compound_plot_example.ipynb  context_plot_example.ipynb  dashboard_example.py  dataframe_input_example.ipynb  hover_example.ipynb  hue_and_grouping_example.ipynb  manipulator_example.ipynb  preset_usage_example.ipynb  sankey_alluvial_example.ipynb
notebooks/: examples.ipynb  test.ipynb
tests/: conftest.py  preset_usage_example.ipynb  test_compound_plots.py  test_core.py  test_core_inputs.py  test_data_inputs.py  test_grouping.py  test_input_robustness.py  test_io.py  test_layout.py  test_linked.py  test_presets.py  test_registry_and_backends.py  test_scales.py  test_specs.py
(+8 files in other folders)
