[project]
name = "behaviz"
version = "0.5.10"
description = "A modular and flexible graphing library"
authors = [{name = "Sakir Kaan Cetindag", email = "cetindag.kaan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["visualization", "dataviz"]

classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Typing :: Typed",
]

dependencies = [
    "bokeh>=3.9.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "panel>=1.9.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]


[project.scripts]
behaviz = "behaviz.cli:main"

[project.urls]
Homepage = "https://github.com/kaancet/behaviz"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["behaviz*"]
exclude = ["notebooks*", "res*", "build*", "*.egg-info*"]

[tool.setuptools.package-data]
behaviz = ["py.typed"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "polars>=1.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]
